# SkyPro

./: .flake8  .gitignore  README.md  SkyPro.rar  SkyPro9.2.rar  main.py  pyproject.toml  sample.env.sample
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  sheets_reader.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_sheets_reader.py  test_utils.py  test_widget.py
