[tool.poetry]
name = "skypro"
version = "0.12.1"
description = "SkyPro Project"
authors = ["p3n <puma3new@bk.ru>"]
readme = "README.md"
packages = [{include = "skypro", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
python-dotenv = "*"
requests = "^2.32.4"
pandas = "^2.3.0"
openpyxl = "^3.1.5"
pandas-stubs = "^2.2.3.250527"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'
